# watr

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  bootstrap  build_dist.sh  build_protoc.sh  commit-changes.sh  coordinated-test.sh  debug-both.py  debug-receive.py  debug-send.py  deploy_to_rpi.sh  direct-sniff.py  final-test.sh  monitor-test.py  packet-test-final.sh  requirements-rpi.txt  requirements.txt  run-packet-test.sh  setup-monitor.sh  setup.py  simple-test.py  test-bootstrap-monitor.py  test-debug.sh  test-monitor-fix.py  test-packets  test-receive.py  test-send.py  test-watr-receive-debug.py  test-watr-receive-fixed.py  test-watr-receive.py  test-watr-send-single.py  test-watr-send.py  verify-monitor.py  watr-sniff-test.py  working-packet-test.sh  working-test.sh
docs/: API.md  DEPLOYMENT.md  PACKET_TRANSMISSION.md  TROUBLESHOOTING.md  packet-reception-fix.md
examples/: simple_example.py
include/watr/: protocol.h
protoc/: .env  .envname  .gitignore  Makefile  README.md  WATRNode.py  build-aircrack-ng.sh  build.sh  custom.py  dumpit.sh  history-tm10.txt  history-tm11.txt  history.txt  hush.py  install-net.sh  networking.sh  receive-test.cpp  requirements.txt  reset.sh  send-test.cpp  sendit.sh  test-debug.sh  update.sh  watr-addr.sh  watr-config.sh  watr-header.sh  watr-init.sh  watr-node.sh  watr-receive.sh  watr-send.sh  watr_protocol.cpp  watr_protocol.h  wifi-monitor-check  wifi-monitor-setup  wifi-monitor-setup.c
protoc/net/: README.md  (+31 more)
protoc/src/: CMakeLists.txt  Makefile  build-wifi-monitor-check.sh  build-wifi-monitor-setup.sh  custom.cpp  wifi-monitor-check.c
protoc/src/tmp/: Makefile  watr_protocol.cpp  watr_protocol.h
src/: CMakeLists.txt  bindings.cpp  protocol.cpp
tests/: test_basic.py  test_protocol.py
(+30 files in other folders)
